added the thread and member domain entities